ACS-11412 Fix PR comments