@@ -19,7 +19,6 @@
 package org.hyland.sdk.cic.agent.object;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -30,7 +29,7 @@ public record SubmitQuestionRequest(String question, List<String> contextObjectI
 
     public SubmitQuestionRequest {
         Objects.requireNonNull(question, "question cannot be null");
-        contextObjectIds = contextObjectIds != null ? Collections.unmodifiableList(contextObjectIds) : null;
+        contextObjectIds = contextObjectIds != null ? List.copyOf(contextObjectIds) : null;
     }
 
     public static Builder builder() {
